--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="step.ahead.group.sugar">
 
     <application
-        android:allowBackup="true"
         android:name=".utils.App"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sugar">
+        <activity android:name=".activities.MainActivity"></activity>
         <activity
             android:name=".activities.SplashActivity"
             android:label="@string/app_name">
@@ -19,8 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.SplashIntroActivity"/>
+        <activity android:name=".activities.SplashIntroActivity" />
     </application>
 
 </manifest>
