--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
     implementation 'com.github.st235:expandablebottombar:1.3.0'
     implementation 'com.android.support:multidex:1.0.3'
-
+    implementation "org.java-websocket:Java-WebSocket:1.5.1"
+    implementation 'tech.gusavila92:java-android-websocket-client:1.2.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
