--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="step.ahead.group.sugar">
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <application
         android:name=".utils.App"
@@ -11,7 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sugar">
+        android:theme="@style/Theme.Sugar"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity android:name=".activities.MainActivity"></activity>
         <activity
             android:name=".activities.SplashActivity"
@@ -23,8 +26,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.SplashIntroActivity" />
-
-        <receiver android:name=".lesteners.SmsListener" android:enabled="true"
+        <service android:name=".webservices.EventSourceService"
+            tools:ignore="ExportedService">
+            <intent-filter>
+                <action android:name="android.app.Service" />
+            </intent-filter>
+        </service>
+        <receiver android:name=".listeners.SmsListeners" android:enabled="true"
             android:permission="android.permission.BROADCAST_SMS">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
