--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
     <application
         android:name=".utils.App"
         android:allowBackup="true"
-        android:icon="@drawable/sugar_plus_icon"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/sugar_plus_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sugar"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:replace="android:icon">
         <activity android:name=".activities.MainActivity"></activity>
         <activity
             android:name=".activities.SplashActivity"
