--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+VERSION_NAME=1.3
+VERSION_CODE=4
+GROUP=cn.pedant.sweetalert
