--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,10 @@ android {
     }
 }
 
-repositories {
+/*repositories {
     maven { url "https://jitpack.io" }
-}
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/"}
+}*/
 
 dependencies {
 
@@ -66,6 +67,9 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation "org.java-websocket:Java-WebSocket:1.5.1"
     implementation 'tech.gusavila92:java-android-websocket-client:1.2.2'
+    implementation 'com.afollestad:vvalidator:0.5.2'
+    //implementation "com.wajahatkarim3.easyvalidation:easyvalidation-core:1.0.1"
+    //implementation 'com.github.Alna7ari:android-saripaar:2.0.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
