--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation "org.java-websocket:Java-WebSocket:1.5.1"
     implementation 'tech.gusavila92:java-android-websocket-client:1.2.2'
     implementation 'com.afollestad:vvalidator:0.5.2'
+    implementation 'com.github.LucasFsc:Html2Pdf:0.2-beta'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     //implementation "com.wajahatkarim3.easyvalidation:easyvalidation-core:1.0.1"
     //implementation 'com.github.Alna7ari:android-saripaar:2.0.3'
     testImplementation 'junit:junit:4.+'
